--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -5,13 +5,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>
         <%=pageTitle%>
     </title>
 </head>
 
 <body>
-    <h1>Contact Page</h1>
+    <%- include("layout/header.ejs") %>
+        <ul>
+            <li><a href="./">Home Page</a></li>
+            <li><a href="./contact">Contact</a></li>
+            <li>
+                <%if(language.length>0){ %>
+                    <ul>
+                        <% for(let i=0;i<language.length;i++) {%>
+                            <li><a href="">
+                                    <%=language[i]%>
+                                </a></li>
+                            <%}%>
+                    </ul>
+                    <%} else{%>
+                        No date
+                        <%}%>
+            </li>
+        </ul>
+        <h1>Contact Page</h1>
 </body>
 
 </html>
