--- a/src/views/homePage.ejs
+++ b/src/views/homePage.ejs
@@ -10,7 +10,13 @@
     </title>
 </head>
 
+
 <body>
+    <ul>
+        <li><a href="./">Home Page</a></li>
+        <li><a href="./contact">Contact</a></li>
+        <li></li>
+    </ul>
     <h1>Home Page</h1>
 </body>
 
